cambios en contactos

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contactos</h2>
         </div>
 
         <div class="row mt-1">
@@ -633,20 +633,20 @@
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Direccion:</h4>
+                <p>Av. Ayacucho y calle Jordan</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4>Correo:</h4>
+                <p>raul.vera.portanda@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Celular:</h4>
+                <p>+591 77911115</p>
               </div>
 
             </div>
