--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Cumpleaños:</strong> 11 noviembre</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Sitio Web:</strong> www.incos.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Tekefono:</strong> +591 77911115</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Ciudad : Cochabamba</li>
                 </ul>
               </div>
               <div class="col-lg-6">
