--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portafolio</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Servicios</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contactos</span></a></li>
-        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Direccion</span></a></li>
+        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Direccion2desdegithub</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
